<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivityHm">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txtComplexCalculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/authorName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/txtViewGetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="108dp"
        android:text="TextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:text="@string/txtFirstName"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtViewGetName"
        app:layout_constraintEnd_toStartOf="@+id/txtViewGetName" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:text="@string/txtLastName"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtViewGetSurname"
        app:layout_constraintEnd_toStartOf="@+id/txtViewGetSurname" />

    <TextView
        android:id="@+id/txtViewGetSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="104dp"
        android:text="TextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewGetName" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="45dp"
        android:text="Z1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="15dp"
        android:text="Z2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRealZ1" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:text="+"
        app:layout_constraintBaseline_toBaselineOf="@+id/editRealZ1"
        app:layout_constraintStart_toEndOf="@+id/editRealZ1" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="i"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editImaginaryZ1"
        app:layout_constraintStart_toEndOf="@+id/editImaginaryZ1" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:text="+"
        app:layout_constraintBaseline_toBaselineOf="@+id/editRealZ2"
        app:layout_constraintStart_toEndOf="@+id/editRealZ2" />

    <EditText
        android:id="@+id/editRealZ1"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <EditText
        android:id="@+id/editImaginaryZ1"
        android:layout_width="106dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView17" />

    <EditText
        android:id="@+id/editRealZ2"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/editImaginaryZ2"
        android:layout_width="103dp"
        android:layout_height="55dp"
        android:layout_marginEnd="104dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/editRealZ2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="i"
        app:layout_constraintBaseline_toBaselineOf="@+id/editImaginaryZ2"
        app:layout_constraintStart_toEndOf="@+id/editImaginaryZ2" />

    <Spinner
        android:id="@+id/spinnerOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:entries="@array/operator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRealZ2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:onClick="Calculate"
        android:text="@string/txtCalculate"
        app:layout_constraintBaseline_toBaselineOf="@+id/spinnerOperator"
        app:layout_constraintStart_toEndOf="@+id/spinnerOperator" />

    <EditText
        android:id="@+id/editResultReal"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOperator" />

    <EditText
        android:id="@+id/editResultImaginary"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:layout_marginStart="47dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView24"
        app:layout_constraintStart_toEndOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="i"
        app:layout_constraintBaseline_toBaselineOf="@+id/editResultImaginary"
        app:layout_constraintStart_toEndOf="@+id/editResultImaginary" />

    <Button
        android:id="@+id/btnMainPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:onClick="toMain"
        android:text="@string/btnToMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:text="+"
        app:layout_constraintBaseline_toBaselineOf="@+id/editResultReal"
        app:layout_constraintStart_toEndOf="@+id/editResultReal" />

</androidx.constraintlayout.widget.ConstraintLayout>